# bot_for_Trello

./: .env_example  .gitignore  Dockerfile  README.md  create_new_bot.py  docker-compose.yml  main.py  pyproject.toml
database/: sqlite_db.py  tables.py
handlers/: __init__.py  my_desks.py  start.py
utils/: kaiten.py  trello.py
